--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -906,7 +906,7 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
-            sudo apt-get -qq -y install lcov
+            sudo apt-get -qq -y install lcov ruby ruby-dev
             sudo pip install coverage coveralls coveralls-merge
             gem install coveralls-lcov
 
