--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -709,7 +709,7 @@ jobs:
       - persist_to_workspace:
           root: js_modules/dagit/coverage
           paths:
-            - dagit.lcov.*
+            - lcov.dagit.${CIRCLE_BUILD_NUM}.info
 
   # We are using the machine executor in order to avoid the pitfalls catalogued at
   # https://circleci.com/docs/2.0/building-docker-images/#separation-of-environments.
