--- a/python_modules/dagster-airflow/tox.ini
+++ b/python_modules/dagster-airflow/tox.ini
@@ -12,7 +12,7 @@ setenv =
 deps =
   pip<19.0
   -e ../dagster
-  -e ../libraries/dagster_aws
+  -e ../libraries/dagster-aws
   -e ../dagster-graphql
   -r dev-requirements.txt
 commands =
