--- a/python_modules/airline-demo/tox.ini
+++ b/python_modules/airline-demo/tox.ini
@@ -5,7 +5,7 @@ envlist = py36,py35,py27
 passenv = CIRCLECI CIRCLE_* CI_PULL_REQUEST COVERALLS_REPO_TOKEN TOXENV SLUGIFY_USES_TEXT_UNIDECODE AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID AIRFLOW_HOME
 deps =
   -e ../dagster
-  -e ../libraries/dagster_aws
+  -e ../libraries/dagster-aws
   -r ../dagster/dev-requirements.txt
   -e ../dagstermill
   -e ../dagster-airflow
@@ -31,7 +31,7 @@ commands =
 [testenv:py37]
 deps =
   -e ../dagster
-  -e ../libraries/dagster_aws
+  -e ../libraries/dagster-aws
   -r ../dagster/dev-requirements.txt
   -e ../dagstermill
 commands =
