--- a/python_modules/dagster-airflow/dagster_airflow_tests/test_project/Dockerfile
+++ b/python_modules/dagster-airflow/dagster_airflow_tests/test_project/Dockerfile
@@ -1,10 +1,13 @@
 FROM python:3.7
+FROM python:3.7
 
 ADD dagster dagster
 ADD dagster-graphql dagster-graphql
+ADD dagster-aws dagster-aws
 
-RUN pip install dagster/
-RUN pip install dagster-graphql/
+RUN pip install --upgrade pip && pip install dagster/ dagster-graphql/ dagster-aws/
+# RUN pip install dagster-graphql/
+# RUN pip install dagster-aws/
 
 ADD requirements.txt .
 RUN pip install -r requirements.txt
