--- a/examples/event-pipeline-demo/tox.ini
+++ b/examples/event-pipeline-demo/tox.ini
@@ -16,6 +16,7 @@ deps =
   -r ./dev-requirements.txt
 commands =
   coverage erase
+  airflow initdb
   pytest -vv --junitxml=test_results.xml --cov=event_pipeline_demo --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
   coverage html --omit='.tox/*,**/test_*.py'
