--- a/examples/event-pipeline-demo/tox.ini
+++ b/examples/event-pipeline-demo/tox.ini
@@ -15,6 +15,7 @@ deps =
   -e ../../python_modules/dagster-airflow/
   -r ./dev-requirements.txt
 commands =
+  export SPARK_HOME=`pip show pyspark | grep Location | cut -d' ' -f2`
   coverage erase
   airflow initdb
   pytest -vv --junitxml=test_results.xml --cov=event_pipeline_demo --cov-append --cov-report=
