Try whitelist_externals

--- a/examples/event-pipeline-demo/tox.ini
+++ b/examples/event-pipeline-demo/tox.ini
@@ -14,6 +14,11 @@ deps =
   -e ../../python_modules/dagit
   -e ../../python_modules/dagster-airflow/
   -r ./dev-requirements.txt
+whitelist_externals =
+  export
+  pip
+  grep
+  cut
 commands =
   export SPARK_HOME=`pip show pyspark | grep Location | cut -d' ' -f2`
   coverage erase
