--- a/examples/event-pipeline-demo/tox.ini
+++ b/examples/event-pipeline-demo/tox.ini
@@ -2,7 +2,7 @@
 envlist = py37,py36,py35,py27
 
 [testenv]
-passenv = CIRCLECI CIRCLE_* CI_PULL_REQUEST COVERALLS_REPO_TOKEN TOXENV AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID SLUGIFY_USES_TEXT_UNIDECODE
+passenv = CIRCLECI CIRCLE_* CI_PULL_REQUEST COVERALLS_REPO_TOKEN TOXENV AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID SLUGIFY_USES_TEXT_UNIDECODE SPARK_HOME
 deps =
   -e ../../python_modules/dagster/
   -r ../../python_modules/dagster/dev-requirements.txt
@@ -14,13 +14,7 @@ deps =
   -e ../../python_modules/dagit
   -e ../../python_modules/dagster-airflow/
   -r ./dev-requirements.txt
-whitelist_externals =
-  export
-  pip
-  grep
-  cut
 commands =
-  export SPARK_HOME=`pip show pyspark | grep Location | cut -d' ' -f2`
   coverage erase
   airflow initdb
   pytest -vv --junitxml=test_results.xml --cov=event_pipeline_demo --cov-append --cov-report=
