--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -953,7 +953,8 @@ jobs:
           name: Install spark & set SPARK_HOME
           command: |
             wget http://apache.cs.utah.edu/spark/spark-2.4.1/spark-2.4.1-bin-hadoop2.7.tgz
-            tar –xvf spark-1.6.1-bin-hadoop2.4.tgz –C /usr/bin/
+            sudo tar -xvf spark-2.4.1-bin-hadoop2.7.tgz
+            sudo ln -s spark-2.4.1-bin-hadoop2.7 /usr/bin/spark
             echo 'export SPARK_HOME=/usr/bin/spark' >> $BASH_ENV
       - run:
           name: Run Dagster Tests
